ADD test zero bis (with one pixel top left added)

--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
-TEST=D:\Antoine Paris\github\IA\TD1\
-#TEST=/data/LINUX/IA/ProjetPi/
+PATH_TO_FILE=D:\Antoine Paris\github\IA\TD1\
+#PATH_TO_FILE=/data/LINUX/IA/ProjetPi/
