--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
-PATH_TO_FILE=D:\Antoine Paris\github\IA\TD1\
-#PATH_TO_FILE=/data/LINUX/IA/ProjetPi/
+PATH_TO_FILE=D:\Antoine Paris\github\IA\Images\
+#PATH_TO_FILE=/data/LINUX/IA/Images/
